web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__date__date-functions__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.duckdb\n\nfrom invoices\nselect (invoice_date | date.to_text \"%d/%m/%Y\")\n\n"
snapshot_kind: text
---
SELECT
  strftime(invoice_date, '%d/%m/%Y')
FROM
  invoices
