web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__date__date-functions__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from test_tables\nfilter test_time < date.now\n"
---
SELECT
  *
FROM
  test_tables
WHERE
  test_time < CURRENT_TIMESTAMP
