web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__date__date-functions__4.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.postgres\n\nfrom events\nselect (event_time | date.trunc \"day\")\n\n"
---
SELECT
  DATE_TRUNC('day', event_time)
FROM
  events
